# NotebookAgent_Eval

./: .env.example  .gitignore  README.md  agent.py  app_config.py  benchmark_runner.py  environment.py  headroom_tasks.py  home_credit_headroom_project_new.ipynb  main.py  prompt_builder.py  pyproject.toml  run_artifacts.py  task_loader.py  tools.py
notebooks/: home_credit_agent_session.ipynb
solutions/akash_task/: sessions_dataset_answer1.ipynb  sessions_dataset_answer2.ipynb  sessions_dataset_answer3.ipynb  sessions_dataset_answer4.ipynb
solutions/task_01/: sol.ipynb
solutions/task_02/: sol.ipynb
solutions/task_03/: sol.ipynb
solutions/task_04/: sol.ipynb
solutions/task_05/: sol.ipynb
solutions/task_06/: sol.ipynb
solutions/task_07/: sol.ipynb
solutions/task_08/: sol.ipynb
solutions/task_09/: sol.ipynb
solutions/task_10/: sol.ipynb
solutions/task_11/: sol.ipynb
solutions/task_12/: sol.ipynb
solutions/task_13/: sol.ipynb
solutions/task_14/: sol.ipynb
solutions/task_15/: sol.ipynb
solutions/task_16/: sol.ipynb
solutions/task_17/: sol.ipynb
solutions/task_18/: sol.ipynb
solutions/task_19/: sol.ipynb
solutions/task_20/: sol.ipynb
solutions/task_21/: sol.ipynb
solutions/task_22/: sol.ipynb
tasks/akash_task/: q1.json  q2.json  q3.json  q4.json
tasks/home_credit/: ht_001.json
tasks/task_01/: q01.json  q02.json  q03.json  q04.json  q05.json
tasks/task_02/: q01.json  q02.json  q03.json  q04.json  q05.json
tasks/task_03/: q01.json  q02.json  q03.json  q04.json  q05.json
tests/: test_notebook_agent.py
(+209 files in other folders)
